* Fix reverting to the previous configuration. * Ignore even more irrelevant applyProposed() attempts. * Remove an unused variable (QRect r). * Some more debug output tweaking.

BUG: 169333

svn path=/trunk/KDE/kdebase/workspace/; revision=883800